fix(theme): 🐛 adjust header container translation and prevent horizontal overflow
Added overflow-x: hidden to the root of wm-home to prevent horizontal scrolling. Adjusted the transform property of wm-home-header-container for proper alignment.

--- a/core/src/theme/camminiditalia/1.css
+++ b/core/src/theme/camminiditalia/1.css
@@ -1,7 +1,11 @@
+wm-home > .root {
+  overflow-x: hidden;
+}
+
 wm-home .wm-home-header-container {
   padding-top: 0px !important;
   width: 103%;
-  transform: translate(-6px, -4px);
+  transform: translate(-6px, -5px);
 }
 
 wm-home .wm-home-header-container > wm-inner-component-html {
